# Storage

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/glassdb/: Cargo.toml
crates/glassdb-cli/: Cargo.toml
crates/glassdb-cli/src/: main.rs
crates/glassdb-wasm/: Cargo.toml
crates/glassdb-wasm/src/: lib.rs
crates/glassdb/src/: btree.rs  catalog.rs  crc.rs  db.rs  errors.rs  executor.rs  json.rs  lib.rs  pager.rs  planner.rs  rng.rs  storage.rs  trace.rs  types.rs  wal.rs
crates/glassdb/src/sql/: ast.rs  lexer.rs  parser.rs
crates/glassdb/tests/: btree_fuzz.rs  crash_recovery.rs  sql_end_to_end.rs
web/: app.js  index.html  style.css
